--- a/BE/pyproject.toml
+++ b/BE/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.10,<3.14"
+package-mode = false
 dependencies = [
     "dspy (>=2.6.27,<3.0.0)",
     "fastapi (>=0.116.1,<0.117.0)",
