--- a/BE/pyproject.toml
+++ b/BE/pyproject.toml
@@ -7,7 +7,6 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.10,<3.14"
-package-mode = false
 dependencies = [
     "dspy (>=2.6.27,<3.0.0)",
     "fastapi (>=0.116.1,<0.117.0)",
@@ -23,3 +22,6 @@ dependencies = [
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+package-mode = false
